Stop the navbar from wrapping prematurely

--- a/Ancestory/src/main/resources/css/ancestory.css
+++ b/Ancestory/src/main/resources/css/ancestory.css
@@ -10,3 +10,8 @@ body { padding-top: 70px; }
 .navbar-brand {
 	margin-top: -6px;
 }
+
+.navbar-nav>li {
+	float:none;
+    display:inline-block;
+}
